--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+    <div class="container" id="rpsGame">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+        <div id="gameScore">
+            <h3 id="round_result"></h3>
+            <p id="score_player">Player Score:</p>
+            <p id="score_computer">Computer Score:</p>
+        </div>
+    </div>
     <script src="rockpaperscissor.js"></script>
 </body>
 </html>
